# homevfd

./: .gitignore  CMakeLists.txt
datasheet/: README.md
driver/: device.py  proto.py
src/: CMakeLists.txt  hv_cmd.h  hv_const.h  hv_types.h  hv_usb.c  hv_usb.h  hv_usb_dev.c  hv_vfd.c  hv_vfd.h  main.c  tusb_config.h
